--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     window.onload = function() {
 
       const ui = SwaggerUIBundle({
-        url: "openapi.yml",
+        url: "openapi_01.yaml",
         dom_id: "#eazyshop-oas",
         deepLinking: true,
       })
